Attempt to fix overlap in text and image

--- a/assets/css/aboutcss.css
+++ b/assets/css/aboutcss.css
@@ -117,6 +117,7 @@ select {
 	writing-mode: vertical-rl;
 	text-orientation: sideways-left;
 	margin-left: 3rem;
+	margin-right: 1rem;
 }
 
 
