--- a/assets/css/styleeae.css
+++ b/assets/css/styleeae.css
@@ -123,6 +123,7 @@ select {
 	justify-content: center;
 	height: 95vh;
 	margin-left: 3rem;
+	margin-right: 1rem;
 	
 	background-image: url('https://images.unsplash.com/photo-1639753470510-b819b2d83483?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80');
 	-webkit-background-size: cover;
